--- a/Article/index.html
+++ b/Article/index.html
@@ -24,6 +24,7 @@
 	</div>
 	
 	<script src="https://d3js.org/d3.v4.js"></script>
+	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
 	<script src="bubbleloc.js"></script>
 
 	<!-- adding scrolling effects -->
