Added first draft of prose
Still playing with wording, but trying to get general layout

--- a/Article/index.html
+++ b/Article/index.html
@@ -13,8 +13,19 @@
 </head>
 
 <body>
+	<div class="prose-wrapper">
+		<p class="prose">In September 1975, Lynette "Squeaky" Fromme was arrested for wielding a gun at U.S. President Ford. Though her gun never fired (a point she was adamant to make), her would-be assassination attempt was the talk of the entire country. 
+		</p><br>
+		<p class="prose">A few days before her court date, a caricature of Ms. Fromme appeared on television's newest live comedy sketch show: Saturday Night Live (SNL). The character wore a red dress and wielded a toy gun which (comically) never fired. The performance was the first of its kind on SNL but far from the last.
+		</p><br>
+		<p class="prose">Over the past 42 years, SNL's writers have incorporated impersonations of 2,603 people into their weekly program. Like Ms. Fromme's, the satirizations often star the most relevant figures in American pop culture. But who are they? Why were these people featured? Can we learn anything about America's shifting gaze by following SNL impressions? 
+		</p><br>
+		<p class="prose">Well, I dug into 42 years of data to try to answer those questions. We'll start with the first: <b>who has been impersonated?</b>
+		</p>
+
+
+	</div>
 	<div class="container">
-		<h1>Character bubbles</h1>
 		<div id="vis">
 			<div class="search-bar-one">
           		<input class="search-input-one" type="text" placeholder="Find...">
