Rough Mockup of Article

--- a/EntertainerSwarmChart/index.html
+++ b/EntertainerSwarmChart/index.html
@@ -24,7 +24,7 @@
 	</div>
 	
 	<script src="https://d3js.org/d3.v4.js"></script>
-	<script src="entertainerStream.js"></script>
+	<script src="entertainerMatrix.js"></script>
 
 	<!-- adding scrolling effects -->
 	<script src='https://1wheel.github.io/graph-scroll/graph-scroll.js'></script>
